<resources>
    <!--App Name-->
    <string name="app_name">GitHub User\'s</string>

    <!--Action Bar Main-->
    <string name="search">search</string>
    <string name="favorite">favorite</string>
    <string name="setting">setting</string>

    <!--User Main-->
    <string name="avatar">avatar</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="bio">bio</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="search_hint">username</string>

    <!--Detail User-->
    <string name="profile">Profile</string>
    <string name="number">0</string>
    <string name="tab_text_1">Follower</string>
    <string name="tab_text_2">Following</string>

    <!--Detail Favorite-->
    <string name="favorite_user">Favorite User\'s</string>

    <!--Setting-->
    <string name="setting_user">Setting</string>
    <string name="mode">Dark Mode</string>

    <!--Splash-->
    <string name="splash">splash</string>
</resources>