<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detailuser.DetailUserActivity">

    <ImageView
        android:id="@+id/img_avatar_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/img_avatar_profile"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar_profile"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_username_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_profile"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/tv_bio_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:textColor="?android:textColorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_username_profile"
        app:layout_constraintStart_toStartOf="@+id/tv_username_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_username_profile"
        tools:text="@string/bio" />

    <TextView
        android:id="@+id/tv_follower_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/follower"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_following_profile"
        app:layout_constraintStart_toEndOf="@+id/img_avatar_profile"
        app:layout_constraintTop_toTopOf="@+id/img_avatar_profile" />

    <TextView
        android:id="@+id/tv_number_follower_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_follower_profile"
        app:layout_constraintStart_toStartOf="@+id/tv_follower_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_follower_profile"
        tools:text="@string/number"/>

    <TextView
        android:id="@+id/tv_following_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:textColor="?android:textColorPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_follower_profile"
        app:layout_constraintTop_toTopOf="@+id/img_avatar_profile" />

    <TextView
        android:id="@+id/tv_number_following_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="?android:textColorPrimary"
        android:textSize="20sp"
        android:layout_marginTop="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_following_profile"
        app:layout_constraintStart_toStartOf="@+id/tv_following_profile"
        app:layout_constraintTop_toBottomOf="@+id/tv_following_profile"
        tools:text="@string/number" />

    <ProgressBar
        android:id="@+id/progressBar_detail_user"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/tv_bio_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_favorite"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_baseline_favorite_border_24"
        app:layout_constraintBottom_toBottomOf="@+id/tv_username_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_name_profile" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_bio_profile">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="?android:textColorPrimary" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>